# webkitgtk-shell

./: Makefile.am  autogen.sh  configure.ac
data/: weston.ini.in
src/: webkitgtk-shell.c
