AC_PREREQ(2.60)
AC_INIT([webkitgtk-shell],[0.1])
AC_CANONICAL_HOST

AC_PROG_CC
AC_PROG_INSTALL

DOLT
AC_PROG_LIBTOOL

PKG_PROG_PKG_CONFIG

PKG_CHECK_MODULES([WEBKITGTK_SHELL_DEPS], [webkit2gtk-3.0])
AC_SUBST(WEBKITGTK_SHELL_DEPS_CFLAGS)
AC_SUBST(WEBKITGTK_SHELL_DEPS_LIBS)

AM_INIT_AUTOMAKE([foreign subdir-objects])
AM_PROG_CC_C_O

AC_CONFIG_FILES([Makefile data/weston.ini])
AC_OUTPUT
